...
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toTopOf="@id/linear1"/>
            <TextView
                android:id="@+id/txtRestName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="5dp"
                android:text="@{restaurantdetail.name}"
                android:textStyle="bold"
...
