<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurants.views.RestaurantsNearbyFragment">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <!-- Adding 15 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />
            <include layout="@layout/shimmer_placeholder_layout" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listNearbyRestaurants"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
       >
    </androidx.recyclerview.widget.RecyclerView>
</FrameLayout>